--- a/GROUP_PROJECT/CSS/myRegistered.css
+++ b/GROUP_PROJECT/CSS/myRegistered.css
@@ -29,7 +29,7 @@ body {
     position: absolute;
     transform: translate(-50%, -50%);
     box-sizing: border-box;
-    padding: 70px;
+    padding: 30px;
     border-radius: 5px;
 } 
 .logo {
@@ -49,48 +49,25 @@ body {
 }
 .mother h2 {
     margin: 0%;
-    padding: 0 0 20px;
+    padding-top: 90px;
     text-align: center;
-    font-size: 22px;
+    font-size: 35px;
 } 
 .mother p {
+    text-align: center;
     margin: 0;
     padding: 0;
     font-weight: bold;
 }
-.mother input {
-    width: 100%;
-    margin-bottom: 20px;
-}
-.mother input[type="text"], input[type="password"] {
-    border: none;
-    border-bottom: 1px solid white;
-    background: transparent;
-    outline: none;
-    height:40px ;
-    color: white;
-    font-size: 16px;
-}
-.mother input[type="submit"]{
-    border: none ;
-    outline: none;
-    height: 40px;
-    background: #7dbcde ;
-    color: white ;
-    font-size: 18px;
-    border-radius: 20px;
-}
-.mother input[type="submit"]:hover {
-    cursor: pointer;
-    background: gray;
-    color: black;
-}
 .mother a { 
-  text-decoration: none;
-  font-size: 12px;
-  line-height: 20px;
-  color: darkgray;
+    position: absolute;
+    margin-top: 50px;
+    margin-left: 80px;
+    text-decoration: none;
+    font-size: 12px;
+    line-height: 20px;
+    color: darkgray;
 }
 .mother a:hover {
- color: skyblue;
+    color: skyblue;
 }
