--- a/GROUP_PROJECT/CSS/myHome.css
+++ b/GROUP_PROJECT/CSS/myHome.css
@@ -56,6 +56,9 @@ nav {
     animation: transitionIn 3.75s;
 }
 
+html {
+    animation: transitionIn2 0.75s;
+}
 @keyframes transitionIn {
     from {
         opacity: 0;
@@ -65,6 +68,16 @@ nav {
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+@keyframes transitionIn2 {
+    from {
+        opacity: 0.2;
+    }
+
+    to {
+        opacity: 1;
     }
 }
 
