--- a/GROUP_PROJECT/CSS/myRegister.css
+++ b/GROUP_PROJECT/CSS/myRegister.css
@@ -7,6 +7,22 @@
     font-family: Montserrat;
 }
 
+/* ANIMATION */
+
+html {
+    animation: transitionIn .75s;
+}
+
+@keyframes transitionIn {
+    from {
+        opacity: 0.5;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
 body {
     background-image: url(../Images/myLogin/Background.jpg);
     background-repeat: no-repeat;
