--- a/GROUP_PROJECT/CSS/myHome.css
+++ b/GROUP_PROJECT/CSS/myHome.css
@@ -175,29 +175,27 @@ nav a:nth-child(5):hover~.animation{
 
 /* CONTENT HERE */
 
-.school-img {
-    object-fit: fill;
-    position: absolute;
-    width: 99%;
-    height: 100%;
-    z-index: -3;
+.banner img {
+    width: 100%;
 }
 
-.bg-gradient {
-    position: absolute;
-    height: 100vh;
-    width: 99%;
-    background: linear-gradient(180deg, rgba(47, 105, 179, 0) 0%, #023E8A 100%);
+.bg {
+    text-align: center;
+    word-spacing: 220px;
+    margin-top: -5px;
+    border-width: 0;     
+    height: 750px;
+    background-color: #023E8A;
 }
 
-.bg-gradient{
-    position: absolute;
-    display: grid;
-    place-items: center;
-    align-content: center;
-}
-
-.bg-gradient img {
-    position: absolute;
-    width: 350px;
+.bg p {
+    top: 50px;
+    left: -20px;
+    font-size: 20px;
+    text-decoration: none;
+    color: white;
+    line-height: 50px;
+    position: relative;
+    display: inline-block;
+    text-align: center;
 }
