Commit 7 : The Homepage & About page
Added
- About page
- Unselectable Text
- Animations
- Background Linear on Text
- Media Query for Device's View (Responsive)
- Few Images

--- a/GROUP_PROJECT/CSS/myHome.css
+++ b/GROUP_PROJECT/CSS/myHome.css
@@ -3,7 +3,15 @@
     src: url(../Fonts/Montserrat-Regular.ttf);
 }
 
+@font-face {
+    font-family: Canela;
+    src: url(../Fonts/CanelaDeck-Regular-Trial.otf);
+}
+
 * { 
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
     font-family: Montserrat; 
 }
 
@@ -24,21 +32,35 @@ html {
 }
 
 .logo{
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+
     position: absolute;
-    top: 40px;
-    left: 35px;
+    top: 25px;
+    left: 25px;
     width: 100px;
     height: auto;
 }
 
 .navigation p {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    color: black;
     font-size: large;
+    font-weight: 300;
     position: absolute;
     top: 50px;
     left: 140px;
 }
 
-nav {
+.nav1 {
     position: absolute;
     margin: 35px auto 0;
     left: 510px;
@@ -52,13 +74,71 @@ nav {
 
 /* ANIMATION */
 
-.schoologo {
-    animation: transitionIn 3.75s;
+body {
+    animation: transitionIn 0.75s;
 }
 
-html {
-    animation: transitionIn2 0.75s;
+.quote {
+    animation: transitionIn2 2.75s;
+    transition-delay: 200ms;
 }
+
+/* .nav2 a {
+    animation: transitionIn1 2.75s;
+}
+
+.nav2 a {
+    animation: transitionIn2 3.75s;
+    transition-delay: 200ms;
+} */
+
+.info h2 {
+    animation: transitionIn4 5.75s;
+}
+
+.info p {
+    animation: transitionIn3 6.75s;
+    transition-delay: 400ms;
+}
+
+
+@keyframes transitionIn4 {
+    from {
+        opacity: 0;
+        transform: translateX(20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes transitionIn3 {
+    from {
+        opacity: 0;
+        transform: translateX(-20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes transitionIn2 {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+        transition-delay: 200ms;
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 @keyframes transitionIn {
     from {
         opacity: 0;
@@ -71,17 +151,8 @@ html {
     }
 }
 
-@keyframes transitionIn2 {
-    from {
-        opacity: 0.2;
-    }
 
-    to {
-        opacity: 1;
-    }
-}
-
-nav a {
+.nav1 a {
     font-size: 15px;
     text-decoration: none;
     text-transform: uppercase;
@@ -94,11 +165,11 @@ nav a {
     transition: all .5s linear;
 }
 
-a:hover {
+.nav1 a:hover {
     color:#023E8A;
 }
 
-nav .animation{
+.nav1 .animation{
 	position: absolute;
     margin-top: 5px;
     margin-left: 5px;
@@ -112,39 +183,39 @@ nav .animation{
 	border-radius: 55px;
 	transition: all .5s ease 0s;
 }
-nav a:nth-child(1){
+.nav1 a:nth-child(1){
 	width: 90px;
     transition: all .5s linear;
 }
-nav .start-home, a:nth-child(1):hover~.animation{
+.nav1 .start-home, a:nth-child(1):hover~.animation{
 	width: 80px;
 	left: 0;
 }
-nav a:nth-child(2){
+.nav1 a:nth-child(2){
 	width: 80px;
 }
-nav a:nth-child(2):hover~.animation{
+.nav1 a:nth-child(2):hover~.animation{
 	width: 90px;
 	left: 80px;
 }
-nav a:nth-child(3){
+.nav1 a:nth-child(3){
 	width: 130px;
 }
-nav a:nth-child(3):hover~.animation{
+.nav1 a:nth-child(3):hover~.animation{
 	width: 135px;
 	left: 160px;
 }
-nav a:nth-child(4){
+.nav1 a:nth-child(4){
 	width: 120px;
 }
-nav a:nth-child(4):hover~.animation{
+.nav1 a:nth-child(4):hover~.animation{
 	width: 120px;
 	left: 295px;
 }
-nav a:nth-child(5){
+.nav1 a:nth-child(5){
 	width: 100px;
 }
-nav a:nth-child(5):hover~.animation{
+.nav1 a:nth-child(5):hover~.animation{
 	width: 110px;
 	left: 410px;
 }
@@ -152,9 +223,15 @@ nav a:nth-child(5):hover~.animation{
 /* USERLOG */
 
 .userlog {
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+
     position: absolute;
     border-radius: 50px;
-    top: 40px;
+    top: 25px;
     right: 0;
     margin-top: 17px;
     margin-right: 50px;
@@ -165,7 +242,7 @@ nav a:nth-child(5):hover~.animation{
 .logout {
     filter: invert(9%) sepia(30%) saturate(5280%) hue-rotate(308deg) brightness(62%) contrast(106%);
     position: absolute;
-    top: 40px;
+    top: 25px;
     right: 0;
     margin-top: 35px;
     margin-right: 120px;
@@ -175,27 +252,228 @@ nav a:nth-child(5):hover~.animation{
 
 /* CONTENT HERE */
 
+.quote {
+    display: flex;
+    justify-content: center;
+}
+
+.quote h1 {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    color:#ffffff;
+    margin-top: 200px;
+    font-family: Canela;
+    font-size: 65px;
+    font-weight: 300;
+    position: absolute;
+}
+
+.quote p {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    color:#ffffff;
+    margin-top: 320px;
+    font-weight: 300;
+    position: absolute;
+}
 .banner img {
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+
     width: 100%;
 }
 
-.bg {
+/* .nav2 {
     text-align: center;
-    word-spacing: 220px;
+    word-spacing: 140px;
     margin-top: -5px;
     border-width: 0;     
-    height: 750px;
+    height: 120px;
     background-color: #023E8A;
 }
 
-.bg p {
+.nav2 a {
+    left: -10px;
     top: 50px;
-    left: -20px;
-    font-size: 20px;
+    font-size: 25px;
+    font-weight: lighter;
+    text-transform: uppercase;
     text-decoration: none;
     color: white;
     line-height: 50px;
     position: relative;
-    display: inline-block;
+}
+
+.nav2 a::after {
+    content: "";
+    position: absolute;
+    background-color: white;
+    height: 3px;
+    width: 0;
+    left: 0;
+    bottom: -8px;
+    transition: 0.3s;
+}
+
+.nav2 a:hover {
+    color: white;
+}
+.nav2 a:hover::after {
+    width: 100%;
+} */
+
+
+.info {
+    margin-top: -10px;
+    height: 450px;
+    background-color: #023E8A;
+}
+
+.info h2 {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    background: -webkit-linear-gradient(#eee, #02449a);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    color:#ffffff;
+    padding-top: 5px;
+    padding-left: 120px;
+    font-size: 45px;
+    font-weight: 300;
+}
+
+.info p {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    background: -webkit-linear-gradient(#eee, #8695a9);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    color:#ffffff;
+    padding-top: 20px;
+    padding-left: 180px;
+    font-size: small;
+    font-weight: 100;
+}
+
+.h2-1 {
+    text-align: right;
+    padding-right: 120px;
+}
+
+.p-1 {
+    text-align: right;
+    padding-right: 170px;
+}
+
+.video {
+    position: relative;
+    height: 600px;
+}
+
+video {
+    width: 100%;
+}
+
+.video-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+/* CONTENT ENDS HERE */
+
+
+
+/* CONTACTS */
+
+.outline2 {
+    border-width: 0;
+    height: 180px;
+    background-color: #023E8A;
+}
+
+.contacts {
+    margin-top: -8px;
+    height: 170px;
+    background-color: hsl(0, 0%, 100%);
+}
+
+.contact {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    display: flex;
     text-align: center;
+    justify-content: center;
+    color: black;
+}
+
+.contact2 {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    margin-left: 40px;
+    margin-top: -90px;
+    display: flex;
+    text-align: left;
+    justify-content: left;
+    color: black;
+}
+
+.contact3 {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    margin-right: 40px;
+    margin-top: -50px;
+    display: flex;
+    text-align: right;
+    justify-content: right;
+    color: black;
+}
+
+.logo2 {
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+
+    display: block;
+    margin-top: 35px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+    height: auto;
 }
