--- a/GROUP_PROJECT/CSS/myForgotPassword.css
+++ b/GROUP_PROJECT/CSS/myForgotPassword.css
@@ -4,7 +4,10 @@
 }
 
 * { 
-    font-family: Montserrat;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: Montserrat; 
 }
 
 /* ANIMATION */
