--- a/GROUP_PROJECT/CSS/myAbout.css
+++ b/GROUP_PROJECT/CSS/myAbout.css
@@ -190,315 +190,217 @@ nav a:nth-child(5):hover~.animation {
 
 /* CONTENT HERE */
 
-* {
-    font-family: 'Montserrat';
-    font-weight: 600;
-}
+.banner img {
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 
-html {
-    overflow-x: hidden;
-}
-
-
-/*ABOUT*/
-
-.about2 img {
     width: 100%;
 }
 
-.about h2 {
-    position: absolute;
-    width: 425px;
-    height: 72px;
-    left: 100px;
-    top: 200px;
-    font-style: normal;
-    font-size: 60px;
-
-    color: #FFFFFF;
-}
-
-.about h3 {
-    position: absolute;
-    width: 700px;
-    height: 180px;
-    left: 600px;
-    top: 230px;
-    font-style: italic;
-    font-size: 20px;
-    text-align: right;
-
-    color: #FFFFFF;
-}
-
-.about h4 {
-    position: absolute;
-    width: 136px;
-    height: 37px;
-    left: 149px;
-    top: 400px;
-    font-style: normal;
-    font-size: 30px;
-    color: #FFFFFF;
-
-}
-
-.about h5 {
-
-    position: absolute;
-    width: 110px;
-    height: 37px;
-    left: 1090px;
-    top: 400px;
-    font-style: normal;
-    font-size: 30px;
-    color: #FFFFFF;
-}
-
-.mission p {
-    position: absolute;
-    width: 300px;
-    height: 248px;
-    left: 63px;
-    top: 500px;
-    font-style: italic;
-    font-size: 20px;
-    text-align: center;
-
-    color: #FFFFFF;
-}
-
-#vision {
-    position: absolute;
-    width: 300px;
-    height: 232px;
-    left: 990px;
-    top: 500px;
-    font-style: italic;
-    font-size: 20px;
-    text-align: center;
-    color: #FFFFFF;
-}
-
-/*HISTORY*/
 .history {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #FFFFFF;
-    width: 100%;
-    height: 400x;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    margin-top: 50px;
+    height: 250px;
+    background-color: hsl(0, 0%, 100%);
 }
 
 .history h1 {
-    position: absolute;
-    width: 229px;
-    height: 69.66px;
-    top: 1140px;
-
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 50px;
+    margin-top: 15px;
+    font-size: 40px;
+    text-transform: uppercase;
     color: #023E8A;
-}
-
-.history h2 {
-    position: absolute;
-    width: 334px;
-    height: 34.26px;
-    left: 150px;
-    top: 1373.91px;
-    font-style: normal;
-    font-size: 25px;
-    color: #023E8A;
-}
-
-.history h3 {
-    position: absolute;
-    width: 260px;
-    height: 34.26px;
-    left: 900px;
-    top: 1373.91px;
-    font-style: normal;
-    font-size: 25px;
-    color: #023E8A;
-}
-
-.history p {
-    position: absolute;
-    width: 526px;
-    height: 110.78px;
-    left: 50px;
-    top: 1451.57px;
-    font-weight: 400;
-    font-size: 15px;
-
     text-align: center;
-
-    color: #000000;
 }
 
-.history h4 {
-    position: absolute;
-    width: 529px;
-    height: 94.79px;
-    left: 750px;
-    top: 1451.57px;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 18px;
-    text-align: center;
-
-    color: #000000;
-}
-
-/*ORGANIZATION*/
-.orga2 img {
-    margin-top: 590px;
-    width: 100%;
-}
-
-.orga {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    width: 1350px;
-    height: 725px;
-    top: 1640px;
-}
-
-.orga h1 {
-    position: absolute;
-    width: 409.85px;
-    height: 84.72px;
-    top: 150px;
-
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 50px;
-    line-height: 61px;
-
-    color: #023E8A;
-}
-
-.orga h2 {
-    position: absolute;
-    width: 797px;
-    height: 54px;
-    left: 321px;
-    top: 245px;
-
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 18px;
-    text-align: center;
-
-    color: #000000;
-}
-
-.orgatitle {
+.foundation {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 
     display: flex;
-    position: absolute;
-    width: 1500px;
-    height: 55px;
-    left: 130px;
-    top: 330px;
+    text-align: center;
+    justify-content: space-around;
 }
 
-.orgatitle h3,
-.orgatitle h4,
-.orgatitle h5 {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 25px;
+.foundation h3 {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 
+    margin-top: 50px;
     color: #023E8A;
-    margin: 10px 45px;
-    text-align: center;
 }
 
-.orgatextcontain {
+.foundation2 {
     display: flex;
-    position: absolute;
-    width: 1250px;
-    height: 52.78px;
-    left: 65px;
-    top: 300px;
-}
-
-.orgatext {
-    color: #000000;
-    position: relative;
-    top: 50px;
-    margin: 20px;
-    font-family: 'Montserrat';
-    font-weight: 300;
-    font-size: 13px;
     text-align: center;
-
+    justify-content: space-around;
 }
 
+.foundation2 p {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 
-/*HYMN*/
-.hymn3 img {
-    margin-top: 1400px;
-    width: 100%;
+    margin-top: 20px;
+    font-size: small;
+    color: #023E8A;
+}
+
+.organization {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    background-image: url("../Images/myAbout/Background.png");
+    margin-top: 50px;
+    height: 450px;
+}
+
+.organization h1 {
+    padding-top: 50px;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: #023E8A;
+    text-align: center;
+}
+
+.organization p {
+    margin-top: 15px;
+    color: #023E8A;
+    text-align: center;
 }
 
 .hymn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    width: 100%;
-    height: 986px;
-    top: 700px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    background-image: url("../Images/myAbout/Hymn.png");
+    height: 700px;
 }
 
 .hymn h1 {
-    width: 322px;
-    height: 69px;
-    top: 5px;
-
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 50px;
-    line-height: 61px;
-
-    color: #F4F9FF;
+    padding-top: 50px;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: #ffffff;
+    text-align: center;
 }
 
-.hymn h2 {
-    left: 80px;
-    width: 582px;
-    height: 754px;
-    top: 120px;
+.hymn2 {
+    display: flex;
     text-align: left;
-    font-size: 15px;
-    color: #FFFFFF;
+    justify-content: space-around;
 }
 
-#hymnh3 {
-    left: 800px;
-    width: 582px;
-    height: 754px;
-    top: 120px;
-    text-align: left;
-    font-size: 15px;
-    color: #FFFFFF;
+.hymn2 p {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    margin-top: 20px;
+    font-size: small;
+    color: #ffffff;
 }
 
+
+/* CONTENT ENDS HERE */
+
+/* CONTACTS / BOTTOMLINE */
 .outline {
     border-width: 0;
     height: 20px;
     background-color: #023E8A;
+}
+
+.outline2 {
+    border-width: 0;
+    height: 20px;
+    background-color: #023E8A;
+}
+
+.contacts {
+    margin-top: -8px;
+    height: 170px;
+    background-color: hsl(0, 0%, 100%);
+}
+
+.contact {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    color: black;
+}
+
+.contact2 {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    margin-left: 40px;
+    margin-top: -90px;
+    display: flex;
+    text-align: left;
+    justify-content: left;
+    color: black;
+}
+
+.contact3 {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
+    margin-right: 40px;
+    margin-top: -50px;
+    display: flex;
+    text-align: right;
+    justify-content: right;
+    color: black;
+}
+
+.logo2 {
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+
+    display: block;
+    margin-top: 35px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+    height: auto;
 }
 
