Commit 13 : Small Changes

--- a/Project/CSS/myAcademics.css
+++ b/Project/CSS/myAcademics.css
@@ -295,12 +295,15 @@ body {
     -webkit-user-select: none;
     -ms-user-select: none;
 
+    text-transform: uppercase;
+    font-weight:bolder;
+    font-family: Montserrat;
     position: absolute;
     top: 405px;
     margin-left: 50px;
     font-size: xx-large; 
     z-index: 5;
-    color: white;
+    color:white;
 }
 .cont button{
     margin-left: 90%;
@@ -339,12 +342,15 @@ body {
     -webkit-user-select: none;
     -ms-user-select: none;
 
+    text-transform: uppercase;
+    font-weight:bolder;
+    font-family: Montserrat;
     position: absolute;
     top: 405px;
     margin-left: 50px;
     font-size: xx-large; 
     z-index: 5;
-    color: white;
+    color:white;
 }
 .cont1 button{
     margin-left: 90%;
@@ -383,6 +389,9 @@ body {
     -webkit-user-select: none;
     -ms-user-select: none;
 
+    text-transform: uppercase;
+    font-weight:bolder;
+    font-family: Montserrat;
     position: absolute;
     top: 405px;
     margin-left: 50px;
@@ -403,7 +412,6 @@ body {
 .color2{
     width: 100%;
     height: 30%;
-    background: linear-gradient(180deg, rgba(47, 105, 179, 0) 0%, #023E8A 100%);
     opacity: .6;
     position: absolute;
     margin-top: 350px;
@@ -427,6 +435,9 @@ body {
     -webkit-user-select: none;
     -ms-user-select: none;
 
+    text-transform: uppercase;
+    font-weight:bolder;
+    font-family: Montserrat;
     position: absolute;
     top: 405px;
     margin-left: 50px;
@@ -453,6 +464,12 @@ body {
 .outline2 {
     border-width: 0;
     height: 20px;
+    background-color: #023E8A;
+}
+
+.outline3 {
+    border-width: 0;
+    height: 5px;
     background-color: #023E8A;
 }
 
