--- a/Project/CSS/myContacts.css
+++ b/Project/CSS/myContacts.css
@@ -131,8 +131,7 @@ nav a:nth-child(2) {
     width: 80px;
 }
 
-nav .start-home,
-a:nth-child(2):hover~.animation {
+nav a:nth-child(2):hover~.animation {
     width: 90px;
     left: 80px;
 }
@@ -159,7 +158,7 @@ nav a:nth-child(5) {
     width: 100px;
 }
 
-nav a:nth-child(5):hover~.animation {
+nav  .start-home, a:nth-child(5):hover~.animation {
     width: 110px;
     left: 410px;
 }
@@ -360,7 +359,7 @@ margin-top: -48px;
 
 .contacts {
     margin-top: -8px;
-    height: 70px;
+    height: 170px;
     background-color: hsl(0, 0%, 100%);
 }
 
