--- a/Project/CSS/myContacts.css
+++ b/Project/CSS/myContacts.css
@@ -197,8 +197,12 @@ nav  .start-home, a:nth-child(5):hover~.animation {
     -ms-user-select: none;
 
     width: 100%;
-    height: 700px;
-    background-size: fill;
+    height: auto;
+    background-size: contain;
+}
+
+.banner {
+    height: -150px;
 }
 
 
